<resources>
    <string name="app_name">CRUD SQLite</string>
    <string name="app_title">CRUD SQLite</string>
    <string name="hint_name">Name</string>
    <string name="hint_email">Email</string>
    <string name="btn_add_user">Add User</string>
    <string name="tv_database">User Database</string>
    <string name="btn_show_user">View User</string>
    <string name="hint_field_category_name">Nombre de la categoria</string>
    <string name="hint_field_category_description">Descripcion</string>
    <string name="alt_category_image">Category Image</string>
    <string name="btn_category_create">Crear Categoria</string>
    <string name="fab_btn_add_category">Add Category</string>
    <string name="hint_field_product_name">Nombre del producto</string>
    <string name="hint_field_product_description">Descripcion</string>
    <string name="hint_field_product_price">Precio</string>
    <string name="btn_product_create">Crear producto</string>
    <string name="fab_btn_category_add">Add Category</string>
    <string name="alt_product_update_image2">Product Image 2</string>
    <string name="alt_product_update_image1">Product Image 1</string>
    <string name="btn_product_update">Actualizar producto</string>
    <string name="txt_ecommerce_app_name">ECOMMERCE APP</string>
    <string name="hint_field_email_login">Correo electrónico</string>
    <string name="hint_field_password_login">Contraseña</string>
    <string name="btn_login">LOGIN</string>
    <string name="mssg_account">¿No tienes cuenta?</string>
    <string name="mssg_register">Regístrate</string>
    <string name="alt_login_banner">Banner</string>
    <string name="alt_login_logo">Logo</string>
    <string name="txt_login_form_name">INGRESAR</string>
    <string name="alt_register_banner">Banner</string>
    <string name="btn_register">CONFIRMAR</string>
    <string name="hint_field_register_password2">Confirmar Contraseña</string>
    <string name="hint_field_register_password1">Contraseña</string>
    <string name="hint_field_register_phone">Teléfono</string>
    <string name="hint_field_register_email">Correo electrónico</string>
    <string name="hint_field_register_lastname">Apellidos</string>
    <string name="hint_field_register_names">Nombres</string>
    <string name="txt_title_register_form">REGISTRARSE</string>
    <string name="txt_title_register_app">INGRESA ESTA INFORMACIÓN</string>
    <string name="fab_btn_category_address">Add Category</string>
    <string name="btn_continue">Continuar</string>
    <string name="alt_logout">Logout</string>
    <string name="alt_info_name">Nombre del perfil</string>
    <string name="alt_info_email">Email del perfil</string>
    <string name="alt_info_phone">Telefono del perfil</string>
    <string name="alt_profile_backg">Fondo perfil</string>
    <string name="txt_profile_name">Luis Garzón</string>
    <string name="label_profile_name">Nombre de usuario</string>
    <string name="txt_profile_email">luisgar@gmail.com</string>
    <string name="label_profile_email">Correo electrónico</string>
    <string name="txt_profile_genre">Masculino</string>
    <string name="label_profile_genre">Género</string>
    <string name="txt_profile_form_title">ACTUALIZAR</string>
    <string name="hint_field_profile_name">Nombre</string>
    <string name="hint_field_profile_lastname">Apellido</string>
    <string name="hint_field_profile_genre">Género</string>
    <string name="btn_profile_confirm">Confirmar</string>
    <string name="alt_category_create_image">Category Image</string>
    <string name="alt_category_create_name">Nombre de la categoria</string>
    <string name="hint_category_create_name">Descripcion</string>
    <string name="btn_category_update">Actualizar Categoria</string>
    <string name="textvpanpancat_prod">Pan Pan</string>
    <string name="texvcateglist">Categorias</string>
    <string name="texvproductlist">Productos</string>
    <string name="nav_iniciocliente">Inicio</string>
    <string name="nav_pedidoscliente">Pedidos</string>
    <string name="nav_ubicacióncliente">Ubicación</string>
    <string name="nav_perfilcliente">Perfil</string>
    <string name="textvprodctlistcliente">Productos</string>
    <string name="decrement_button_pd">btndecrement</string>
    <string name="increment_button_pd">btnincrement</string>
    <string name="imgcroissprodCliente">imgcroisant</string>
    <string name="btn_atras">btnatras</string>
    <string name="confirmation_image">confimg</string>
    <string name="desplegable">tipoident</string>
    <string name="toolbar_category_title">Nueva categoria</string>
    <string name="toolbar_category_update_title">Actualizar categoria</string>
    <string name="toolbar_new_product_title">Nuevo producto</string>
    <string name="toolbar_profileupdate_title">Actualizar perfil</string>


</resources>