<?xml version="1.0" encoding="utf-8"?>
<!-- res/layout/activity_login.xml -->
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <ImageView
        android:id="@+id/background_image"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:contentDescription="@string/alt_login_banner"
        android:src="@drawable/banner" />

    <ImageView
            android:id="@+id/logo_image"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginTop="100dp"
            android:layout_centerHorizontal="true"
            android:src="@drawable/shopping_cart_blue"
            android:contentDescription="@string/alt_login_logo"
            android:layout_gravity="center" />

    <TextView
        android:id="@+id/app_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_gravity="center"
        android:layout_marginStart="126dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="93dp"
        android:text="@string/txt_ecommerce_app_name"
        android:textColor="@color/black"
        android:textSize="22sp"
        android:textStyle="bold" />

    <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginTop="30dp"
            android:backgroundTint="#B3FFFFFF"
            app:cardCornerRadius="40dp">

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="30dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/txt_login_form_name"
                    android:textSize="17sp"
                    android:textColor="@color/black"
                    android:textStyle="bold"
                    android:layout_gravity="center"
                    android:layout_marginBottom="20dp" />

                <EditText
                    android:id="@+id/email_input"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_field_email_login"
                    android:drawableStart="@drawable/ic_menu"
                    android:padding="10dp"
                    android:inputType="textEmailAddress"
                    android:minHeight="48dp"
                    android:autofillHints="Lorem ipsum"/>

                <EditText
                    android:id="@+id/password_input"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_field_password_login"
                    android:drawableStart="@drawable/ic_menu_info_details"
                    android:padding="10dp"
                    android:layout_marginTop="10dp"
                    android:inputType="textPassword"
                    android:minHeight="48dp"
                    android:autofillHints="Lorem ipsum"/>

                <Button
                    android:id="@+id/login_button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/btn_login"
                    android:layout_marginTop="20dp"
                    android:backgroundTint="#3F51B5"
                    android:textColor="@color/white" />

                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="20dp">

                    <TextView
                        android:text="@string/mssg_account"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />

                    <TextView
                        android:id="@+id/register_link"
                        android:text="@string/mssg_register"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="#3F51B5"
                        android:layout_marginStart="5dp"
                        android:clickable="true"
                        android:minHeight="48dp"/>
                </LinearLayout>
            </LinearLayout>
        </androidx.cardview.widget.CardView>

</RelativeLayout>