<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/background_image"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:src="@drawable/banner_form"
        android:contentDescription="@string/alt_register_banner"/>



        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:paddingTop="20dp"
            android:paddingBottom="20dp"
            tools:ignore="UseCompoundDrawables">

            <ImageView
                android:id="@+id/icon_image"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_marginTop="20dp"
                android:src="@drawable/user_form"
                android:contentDescription="@string/alt_login_logo"
                android:layout_gravity="center" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txt_title_register_app"
                android:textColor="@color/white"
                android:textSize="16sp"
                android:textStyle="bold"
                android:layout_gravity="center"
                android:layout_marginTop="10dp" />
        </LinearLayout>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="#B3FFFFFF"
            android:layout_alignParentBottom="true"
            app:cardCornerRadius="40dp">

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="30dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/txt_title_register_form"
                    android:textSize="17sp"
                    android:textColor="@color/black"
                    android:textStyle="bold"
                    android:layout_gravity="center"
                    android:layout_marginBottom="20dp" />

                <EditText
                    android:id="@+id/name_input"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_field_register_names"
                    android:drawableStart="@drawable/ic_menu"
                    android:padding="10dp"
                    android:inputType="text"
                    android:minHeight="48dp"
                    android:autofillHints="Lorem ipsum"/>

                <EditText
                    android:id="@+id/lastname_input"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_field_register_lastname"
                    android:drawableStart="@drawable/ic_menu"
                    android:padding="10dp"
                    android:layout_marginTop="10dp"
                    android:inputType="text"
                    android:minHeight="48dp"
                    android:autofillHints="Lorem ipsum"/>

                <EditText
                    android:id="@+id/email_input"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_field_register_email"
                    android:drawableStart="@drawable/ic_menu_info_details"
                    android:padding="10dp"
                    android:layout_marginTop="10dp"
                    android:inputType="textEmailAddress"
                    android:minHeight="48dp"
                    android:autofillHints="Lorem ipsum"/>

                <EditText
                    android:id="@+id/phone_input"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_field_register_phone"
                    android:drawableStart="@drawable/ic_menu_info_details"
                    android:padding="10dp"
                    android:layout_marginTop="10dp"
                    android:inputType="phone"
                    android:minHeight="48dp"
                    android:autofillHints="Lorem ipsum"/>

                <EditText
                    android:id="@+id/password_input"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_field_register_password1"
                    android:drawableStart="@drawable/ic_menu_info_details"
                    android:padding="10dp"
                    android:layout_marginTop="10dp"
                    android:inputType="textPassword"
                    android:minHeight="48dp"
                    android:autofillHints="Lorem ipsum"/>

                <EditText
                    android:id="@+id/confirm_password_input"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_field_register_password2"
                    android:drawableStart="@drawable/ic_menu_info_details"
                    android:padding="10dp"
                    android:layout_marginTop="10dp"
                    android:inputType="textPassword"
                    android:minHeight="48dp"
                    android:autofillHints="Lorem ipsum"/>

                <Button
                    android:id="@+id/register_button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/btn_register"
                    android:layout_marginTop="20dp"
                    android:backgroundTint="#3F51B5"
                    android:textColor="@color/white" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>

</RelativeLayout>