<?xml version="1.0" encoding="utf-8"?>


<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F8F7EE">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar_new_category"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#90531D"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:navigationIcon="@drawable/ic_arrow_back"
        app:title="@string/toolbar_category_title"
        app:titleTextColor="@color/white" />

    <ImageView
        android:id="@+id/category_create_image"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginTop="56dp"
        android:contentDescription="@string/alt_category_image"
        android:src="@drawable/image_add"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar_new_category" />

    <EditText
        android:id="@+id/category_create_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="56dp"
        android:layout_marginEnd="32dp"
        android:autofillHints="Lorem ipsum"
        android:drawableStart="@drawable/ic_menu"
        android:drawablePadding="10dp"
        android:hint="@string/hint_field_category_name"
        android:inputType="text"
        android:minHeight="48dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/category_create_image" />

    <EditText
        android:id="@+id/category_create_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="32dp"
        android:autofillHints="Lorem ipsum"
        android:drawableStart="@drawable/ic_menu_info_details"
        android:drawablePadding="10dp"
        android:hint="@string/hint_field_category_description"
        android:minHeight="48dp"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/category_create_name" />

    <Button
        android:id="@+id/create_category_button"
        android:layout_width="235dp"
        android:layout_height="48dp"
        android:layout_marginBottom="89dp"
        android:backgroundTint="#5B4850"
        android:fontFamily="@font/open_sans_semibold"
        android:text="@string/btn_category_create"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>